get new version

--- a/client/Views/App/home.html
+++ b/client/Views/App/home.html
@@ -2,7 +2,9 @@
    <div class="swiper-container">
     <div class="swiper-wrapper">
         {{#each getbanner}}
-            <div class="swiper-slide" data-hash="slide1"><img src="{{getImg imageId}}"></div>
+            <div class="swiper-slide" data-hash="slide1">
+                <img src="{{getImg imageId}}">
+            </div>
         {{/each}}
             
         </div>
