--- a/client/Views/App/product/listproducts.html
+++ b/client/Views/App/product/listproducts.html
@@ -17,7 +17,7 @@
                                 <a href="{{pathFor 'details' id=_id}}" class="title">
                                     <p class="text-center text-selling-detail">{{smaller title 8}}</p> </a>
                                     <h3 class="text-center price-selling">{{price}}
-                                    <a href="" style="color:#e4332a;" id="unlike">
+                                    <a href="#" style="color:#e4332a;" id="unlike">
                                     <span id="unlike{{_id}}" class="fa fa-heart-o fonfa pull-right"></span>
                                     </a>
                                     <a href="#" id="like" style="color:#e4332a;"><span id="like{{_id}}" class="fa fa-heart nonelike fonfa pull-right"></span></a></h3>
