--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -1,8 +1,5 @@
 <template name="headermenu">	
 	<section id="menu-wrapper">
-		<!-- <div id="menu-search">
-			<input id="menu-search-input-text" type="text" placeholder="Search..." />
-		</div> -->
 		<div id="menu-search">
 		   	<span class="icon-search search-btn kesearch"><i class="fa fa-search search-font"></i></span>
 		   	<input class="input-search" id="textToSearch" type="text" placeholder="{{_"Search for..."}}" />
@@ -53,11 +50,11 @@
 					</a>
 				</li>
 			{{/if}}
-			<li id="a-submenu-1" class="icon plus">
+			<!-- <li id="a-submenu-1" class="icon plus">
 				<a href="/bestSelling">
 					<span class="menu-li-title">Link selling</span>
 				</a>
-			</li> <!-- #submenu-1 -->
+			</li> --> <!-- #submenu-1 -->
 			<!-- <li class="icon info">
 				<a href="aboutus.html">
 					<span class="menu-li-title">Gift</span>
@@ -81,11 +78,11 @@
 					<span class="menu-li-title">TUTO</span>
 				</a>
 			</li>
-			<li class="icon info">
+			<!-- <li class="icon info">
 				<a href="/look">
 					<span class="menu-li-title">LOOKS</span>
 				</a>
-			</li>
+			</li> -->
 			<li class="icon info">
 				<a href="/forum/listing">
 					<span class="menu-li-title">FORUM</span>
@@ -224,9 +221,9 @@
 							</div>
 						</div> -->
 					</div>
-				<li class="item"><a href="#" id="advanced">Advanced</a></li>
+				<!-- <li class="item"><a href="#" id="advanced">Advanced</a></li> -->
 				<!--panel advanced-->
-				<div class="panel_advanced">
+				<!-- <div class="panel_advanced">
 					<ul>
 						<li><a href="">Ingredient Preference</a></li>
 						<li><a href="">Concern</a></li>
@@ -245,7 +242,7 @@
 						</div>
 						<li><a href="#" id="skin_type">Season</a></li>
 					</ul>
-				</div>
+				</div> -->
 			</ul>
 		</div>
    	</section> <!-- #sidebar-wrapper -->
