--- a/client/Views/App/product/listproducts.html
+++ b/client/Views/App/product/listproducts.html
@@ -3,7 +3,13 @@
         <div class="wrapper">
             <p class="text-selling-top">{{nbproducts}}/{{totalProducts}} {{_ "products result"}}</p>
 
-            <p class="text-selling-second">{{_ "Best selling"}} <a href=""><span class="glyphicon glyphicon-play" aria-hidden="true"></span></a></p>
+            <!-- <p class="text-selling-second">{{_ "Best selling"}} <a href=""><span class="glyphicon glyphicon-play" aria-hidden="true"></span></a></p> -->
+            <a href="#" id="bestSelling" style="color:black;"><span class="glyphicon glyphicon-play" aria-hidden="true">{{_ "Best selling"}}</span></a>
+
+            <a href="#" class="text-selling-second" id="name" style="color:black;"> <span class="glyphicon glyphicon-play" aria-hidden="true">{{_ "Sort Name"}} </span></a>
+
+            <a href="#" class="text-selling-second" id="price" style="color:black;"> <span class="glyphicon glyphicon-play" aria-hidden="true">{{_ "Sort Price"}}</span></a>
+
 
             <div class="row">
                     {{#each products}}
