FIX STYLE refine by brand

--- a/client/Views/App/mainLayout.html
+++ b/client/Views/App/mainLayout.html
@@ -5,7 +5,7 @@
             <section id="header">
                 <div id="header-left">
                     <a href="#" id="a-menu"><img src="/img/icons/menu.png" alt="menu" /></a>
-                    <a href="#" id="a-shoping"><img src="/img/icons/shoping-01.png" alt="menu" /></a>
+                    <a href="/checkout" id="a-shoping"><img src="/img/icons/shoping-01.png" alt="menu" /></a>
                 </div>
                 <div id="header-title">
                     <a href="/"><h1><img src="/img/icons/logo-01.png" /></h1></a>
