--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -16,16 +16,16 @@
             {{#if currentUser}}
 				<li id="a-submenu-1" class="icon plus">
 	                <a href="#">
-	                    <span class="menu-li-title">My profile</span>
+	                    <span class="menu-li-title">Profile</span>
 	                </a>
-	                <ul style="display: none;" id="submenu-1">
+	                <ul id="submenu-1">
 	                    <li>
 	                        <a href="/profile">
-	                            <span class="menu-li-title">My safir profile</span>
+	                            <span class="menu-li-title">My Profile</span>
 	                        </a>
 	                    </li>
 	                    <li>
-	                        <a href="/profile1">
+	                        <a href="/member">
 	                            <span class="menu-li-title">Member profile</span>
 	                        </a>
 	                    </li>
@@ -34,11 +34,11 @@
 	                            <span class="menu-li-title">Rewards & points</span>
 	                        </a>
 	                    </li>
-	                    <li>
+	                   <!--  <li>
 	                        <a href="">
 	                            <span class="menu-li-title">Like</span>
 	                        </a>
-	                    </li>
+	                    </li> -->
 	                </ul>
 	            </li>
 	            <li>
@@ -54,7 +54,7 @@
 				</li>
 			{{/if}}
 			<li id="a-submenu-1" class="icon plus">
-				<a href="/bestSelling">
+				<a href="#">
 					<span class="menu-li-title">Link selling</span>
 				</a>
 			</li> <!-- #submenu-1 -->
@@ -72,6 +72,11 @@
 		<hr/>
 		<ul>
 			<li class="icon info">
+				<a href="/favorite">
+					<span class="menu-li-title">FAVORITE</span>
+				</a>
+			</li>
+			<li class="icon info">
 				<a href="/webzinelisting">
 					<span class="menu-li-title">WEBZINE</span>
 				</a>
@@ -82,12 +87,12 @@
 				</a>
 			</li>
 			<li class="icon info">
-				<a href="/look">
+				<a href="#">
 					<span class="menu-li-title">LOOKS</span>
 				</a>
 			</li>
 			<li class="icon info">
-				<a href="/forum/listing">
+				<a href="#">
 					<span class="menu-li-title">FORUM</span>
 				</a>
 			</li>
