--- a/client/Views/App/headerHome.html
+++ b/client/Views/App/headerHome.html
@@ -136,12 +136,12 @@
 										</label >
 										<label  class=" col1_commu">
 											<ul>
-												<li><a href="men.html">LOOKS</a></li>
+												<li><a href="#">LOOKS</a></li>
 											</ul> 
 										</label >
 										<label class=" col1_commu">
 											<ul>
-												<li><a href="men.html">FORUM</a></li>
+												<li><a href="#">FORUM</a></li>
 											</ul>
 										</label >
 									</div>
