--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -15,7 +15,7 @@
 	                <a href="#">
 	                    <span class="menu-li-title">My profile</span>
 	                </a>
-	                <ul style="display: none;" id="submenu-1">
+	                <ul id="submenu-1">
 	                    <li>
 	                        <a href="/profile">
 	                            <span class="menu-li-title">My safir profile</span>
@@ -32,7 +32,7 @@
 	                        </a>
 	                    </li>
 	                    <li>
-	                        <a href="">
+	                        <a href="/favorite">
 	                            <span class="menu-li-title">Like</span>
 	                        </a>
 	                    </li>
