close menu when click

--- a/client/Views/App/header.html
+++ b/client/Views/App/header.html
@@ -7,7 +7,7 @@
 		<ul id="menu-lateral" class="menu">
 			<li>
                 <a href="/">
-                    <span class="menu-li-title">Market</span>
+                    <span class="menu-li-title left-menu">Market</span>
                 </a>
             </li>
             {{#if currentUser}}
@@ -18,35 +18,35 @@
 	                <ul id="submenu-1">
 	                    <li>
 	                        <a href="/profile">
-	                            <span class="menu-li-title">My safir profile</span>
+	                            <span class="menu-li-title left-menu">My safir profile</span>
 	                        </a>
 	                    </li>
 	                    <li>
 	                        <a href="/profile1">
-	                            <span class="menu-li-title">Member profile</span>
+	                            <span class="menu-li-title left-menu">Member profile</span>
 	                        </a>
 	                    </li>
 	                    <li>
 	                        <a href="/reward">
-	                            <span class="menu-li-title">Rewards & points</span>
+	                            <span class="menu-li-title left-menu">Rewards & points</span>
 	                        </a>
 	                    </li>
 	                    <li>
 	                        <a href="/favorite">
-	                            <span class="menu-li-title">Like</span>
+	                            <span class="menu-li-title left-menu">Like</span>
 	                        </a>
 	                    </li>
 	                </ul>
 	            </li>
 	            <li>
 					<a href="#">
-						<span class="menu-li-title" id="logout">Logout</span>
+						<span class="menu-li-title left-menu" id="logout">Logout</span>
 					</a>
 				</li>
             {{else}}
 				<li class="icon box">
 					<a href="/login">
-						<span class="menu-li-title">Sing in / Register</span>
+						<span class="menu-li-title left-menu">Sing in / Register</span>
 					</a>
 				</li>
 			{{/if}}
@@ -55,17 +55,17 @@
 		<ul>
 			<li class="icon info">
 				<a href="/webzinelisting">
-					<span class="menu-li-title">WEBZINE</span>
+					<span class="menu-li-title left-menu">WEBZINE</span>
 				</a>
 			</li>
 			<li class="icon info">
 				<a href="/tuto">
-					<span class="menu-li-title">TUTO</span>
+					<span class="menu-li-title left-menu">TUTO</span>
 				</a>
 			</li>
 			<li class="icon info">
 				<a href="/forum/listing">
-					<span class="menu-li-title">FORUM</span>
+					<span class="menu-li-title left-menu">FORUM</span>
 				</a>
 			</li>
 		</ul>
@@ -80,22 +80,22 @@
 				<div class="panel_price_range">
 					<div class="pull-right">
 						<div class="checkbox">
-						  	<label><input type="checkbox" value="" data-max="100" data-min="0" id="f-check" name="checkbox"> 0 to 700K</label>
+						  	<label><input type="checkbox" value="" data-max="100" data-min="0" name="checkbox" class="right-menu"> 0 to 700K</label>
 						</div>
 						<div class="checkbox">
-						  	<label><input type="checkbox" value="1000" id="f-check" data-max="1000" data-min="100" name="checkbox">700K to 1M</label>
+						  	<label><input type="checkbox" value="1000" class="right-menu" data-max="1000" data-min="100" name="checkbox">700K to 1M</label>
 						</div>
 						<div class="checkbox">
-						  	<label><input type="checkbox" value="2000" id="f-check" data-max="10000" data-min="1000" name="checkbox"> 1M to 2M</label>
+						  	<label><input type="checkbox" value="2000" class="right-menu" data-max="10000" data-min="1000" name="checkbox"> 1M to 2M</label>
 						</div>
 						<div class="checkbox">
-						  	<label><input type="checkbox" value="3000" id="f-check" data-max="100000" data-min="10000" name="checkbox"> 2M to 3M</label>
+						  	<label><input type="checkbox" value="3000" class="right-menu" data-max="100000" data-min="10000" name="checkbox"> 2M to 3M</label>
 						</div>
 						<div class="checkbox">
-						  	<label><input type="checkbox" value="4000" id="f-check" data-max="1000000" data-min="100000" name="checkbox"> 3M to 4M</label>
+						  	<label><input type="checkbox" value="4000" class="right-menu" data-max="1000000" data-min="100000" name="checkbox"> 3M to 4M</label>
 						</div>
 						<div class="checkbox">
-						  	<label><input type="checkbox" value="100000000" id="f-check" data-max="10000000" name="checkbox"> All</label>
+						  	<label><input type="checkbox" value="100000000" class="right-menu" data-max="10000000" name="checkbox"> All</label>
 						</div>
 					</div>
 				</div>
