--- a/client/Views/App/login/register.html
+++ b/client/Views/App/login/register.html
@@ -4,13 +4,19 @@
 	        	<div class="wrapper">
 	                <div class="row">
 	                    <div class="form-register">
-	                        <div class="text-center">
+	                        <!-- <div class="text-center">
 	                            <a href="/login"><button class="button-log" id="loginTop">{{_ "Login"}}</button></a>
 	                            <strong class="joiner">{{_ "Or"}}</strong>
 	                            <a href="/register"><button id="registerTop">{{_ "Register"}}</button></a>
+	                        </div> -->
+	                        <div class="text-center btn-re-log">
+	                            <ul class="list-inline">
+	                                <li><a href="/login"><button class="btn btn-log">{{_ "Login"}}</button></a></li>
+	                                <li>{{_ "Or"}}</li>
+	                                <li><a href="/register"><button class="btn btn-register-white">{{_ "Register"}}</button></a></li>
+	                            </ul>
 	                        </div>
 	                        <form class="control-group">
-	                       <!--  <div class="register_msg" style="margin-top:10px;color:red"></div> -->
 	                            <div class="control-group">
 	                                <label class="control-label" for="inputEmail">{{_ "Username"}}</label>
 	                                <div class="controls">
